# PythonC20

./: Building.java  Comparator.txt
college-assignment-project/: .env.example  .gitignore  PRD.md  docker-compose.yml  main.py  pyproject.toml
college-assignment-project/academics/: models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
college-assignment-project/academics/migrations/: 0001_initial.py  0002_assignment_assignmentsubmission_delayrequest_subject_and_more.py
college-assignment-project/config/: settings.py  urls.py
college-assignment-project/notifications/: models.py
college-assignment-project/notifications/migrations/: 0001_initial.py
college-assignment-project/users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
college-assignment-project/users/migrations/: 0001_initial.py
day1/: demo.py  oop.py  teacher.py  test.py
fast-task-app/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test.py
fast-task-app/alembic/: env.py
fast-task-app/alembic/versions/: 676bdeaac408_create_users_table.py  a22d64253665_create_tasks_table.py
fast-task-app/app/: main.py
fast-task-app/app/api/: auth.py  external.py  tasks.py
fast-task-app/app/core/: config.py  database.py  security.py
fast-task-app/app/dependencies/: auth.py
fast-task-app/app/models/: __init__.py  task.py  user.py
fast-task-app/app/repositories/: task_repository.py  user_reporsitory.py
fast-task-app/app/schemas/: auth.py  task.py  user.py
fast-task-app/app/services/: auth_service.py  task_service.py
(+61 files in other folders)
